src/app/home/home.component.css
div.home-container{
    display: flex;
    justify-content: center;
    flex-direction: row;
    margin-top: 1em;
    margin-bottom: 5em;
}
div.home-logo{
    text-align: center;
    justify-self: center;
    margin-top: 5em;
    
}

div.search-container button{
    position: absolute;
    right: 0;
    top: 0;
    height: 100%;
}
div.search-container{
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 30vw;
}

